Edited to work with google-login

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,10 +6,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.security.oauth2.client.registration.auth0.client-id=mgkkvvz7AURnRm8Dpkhf3uxbPMpKd952
-spring.security.oauth2.client.registration.auth0.client-secret=lCKuxNBjDs86tqD11lxAVcJZeCCoZZOQFt8SF-GUcfB8OAIVWQSrdhxdykh0X2tI
-spring.security.oauth2.client.registration.auth0.scope=openid,profile,email
-spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-05j1cejijwqrfequ.us.auth0.com/
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 
 
 server.error.include-message=always
